# avocode

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: app.rs  lib.rs  main.rs  types.rs
src/agent/: builtin.rs  mod.rs  prompts.rs  schema.rs
src/auth/: codex.rs  copilot.rs  mod.rs  oauth.rs  store.rs
src/cli/: mod.rs  ui.rs
src/cli/commands/: export.rs  mcp.rs  mod.rs  models.rs  providers.rs  run.rs  serve.rs  session.rs
src/config/: loader.rs  mod.rs  paths.rs  schema.rs
src/error/: mod.rs  named.rs
src/event/: bus.rs  mod.rs
src/llm/: anthropic.rs  google.rs  messages.rs  mod.rs  openai.rs  sse.rs
src/mcp/: client.rs  mod.rs  oauth.rs  sse.rs  stdio.rs  streamable_http.rs  transport.rs
src/permission/: evaluate.rs  manager.rs  mod.rs  schema.rs  wildcard.rs
src/provider/: catalog.rs  mod.rs  models_dev.rs  registry.rs  schema.rs
src/server/: error.rs  mod.rs  sse.rs  state.rs
src/server/routes/: app.rs  config.rs  event.rs  global.rs  mod.rs  permission.rs  provider.rs  session.rs
src/session/: compaction.rs  message.rs  mod.rs  model_parser.rs  processor.rs  schema.rs  service.rs  store.rs
src/skill/: mod.rs
src/storage/: db.rs  migrations.rs  mod.rs  schema.rs
src/tool/: bash.rs  edit.rs  glob.rs  grep.rs  ls.rs  mod.rs  read.rs  registry.rs  schema.rs  webfetch.rs  write.rs
src/tui/: app.rs  events.rs  keybinds.rs  mod.rs  styles.rs  terminal_guard.rs  theme.rs
src/tui/widgets/: chat.rs  dialog.rs  input.rs  mod.rs  model_picker.rs  sidebar.rs  slash_completion.rs  statusbar.rs
tests/: cli_openai.rs  cli_openai_mock.rs  http_api_openai_mock.rs  http_openai.rs  tui_openai_mock.rs
tests/common/: fs.rs  mod.rs  openai_mock.rs  process.rs  pty.rs
tests/support/: mock_openai.rs  mod.rs
