[package]
description = ""
edition = "2024"
license = "MIT"
name = "avocode"
repository = "https://github.com/smartcrabai/avocode"
version = "0.1.0"

[workspace.metadata.dist]
cargo-dist-version = "0.31.0"
ci = "github"
install-path = "CARGO_HOME"
installers = ["shell", "homebrew"]
publish-jobs = ["homebrew"]
tap = "takumi3488/homebrew-tap"
targets = [
  "aarch64-apple-darwin",
  "x86_64-unknown-linux-gnu",
  "aarch64-unknown-linux-gnu",
  "x86_64-pc-windows-msvc",
  "aarch64-pc-windows-msvc",
]

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
tokio = { version = "1.50.0", features = ["full"] }

[profile.release]
codegen-units = 1
lto = true
strip = true

[profile.dist]
inherits = "release"

[lints.clippy]
allow_attributes = "deny"
dbg_macro = "deny"
expect_used = "deny"
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
