[package]
description = "An AI coding agent with support for 15+ LLM providers, multiple interfaces (TUI/CLI/HTTP), and extensible tools"
edition = "2024"
license = "MIT"
name = "avocode"
repository = "https://github.com/smartcrabai/avocode"
version = "0.1.1"

[workspace.metadata.dist]
cargo-dist-version = "0.31.0"
ci = "github"
install-path = "CARGO_HOME"
installers = ["shell", "homebrew"]
publish-jobs = ["homebrew"]
tap = "smartcrabai/homebrew-tap"
targets = [
  "aarch64-apple-darwin",
  "x86_64-unknown-linux-gnu",
  "aarch64-unknown-linux-gnu",
  "x86_64-pc-windows-msvc",
]

[dependencies]
async-trait = "0.1"
axum = { version = "0.8", features = ["json", "macros", "query"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
dirs = "6"
dirs-next = "2"
futures-util = "0.3"
globset = "0.4"
rand = "0.8"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
  "stream",
] }
rusqlite = { version = "0.34", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1", features = ["v4", "v7"] }

[dev-dependencies]
testcontainers = "0.23"

[profile.release]
codegen-units = 1
lto = true
strip = true

[profile.dist]
inherits = "release"

[lints.clippy]
allow_attributes = "deny"
dbg_macro = "deny"
expect_used = "deny"
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
